<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SampleActivity">

    <LinearLayoutи
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            style="@style/TextAppearance.AppCompat.Menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clever_ads_solutions"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/casVersionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:textAlignment="center" />

        <TextView
            style="@style/TextAppearance.AppCompat.Menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/banner_ad"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/showBannerBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show" />

            <Button
                android:id="@+id/hideBannerBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hide" />

            <TextView
                android:id="@+id/bannerStatusText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="5dp"
                android:textAlignment="textEnd" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/banner_size"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/setDefaultSizeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_size" />

            <Button
                android:id="@+id/setLedearboardSizeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ledearboard" />

            <Button
                android:id="@+id/setMrecSizeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mrec" />

            <Button
                android:id="@+id/setAdaptiveSizeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adaptive_size" />
        </LinearLayout>

        <TextView
            style="@style/TextAppearance.AppCompat.Menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/interstitial_ad"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/showInterBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show" />

            <TextView
                android:id="@+id/interStatusText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="5dp"
                android:textAlignment="textEnd" />
        </LinearLayout>

        <TextView
            style="@style/TextAppearance.AppCompat.Menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/rewarded_ad"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/showRewardedBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show" />

            <TextView
                android:id="@+id/rewardedStatusText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="5dp"
                android:textAlignment="textEnd" />
        </LinearLayout>
    </LinearLayoutи>

</androidx.constraintlayout.widget.ConstraintLayout>